[package]
name = "focus_monitor"
version = "0.1.2"
edition = "2021"
description = "Library for iterating over the focused window each time it changes"
homepage = "https://github.com/zd4y/focus_monitor/"
repository = "https://github.com/zd4y/focus_monitor/"
readme = "README.md"
license = "MIT"
keywords = ["window", "focus", "active", "x11", "monitor"]
categories = ["os::linux-apis", "api-bindings"]

[dependencies]
anyhow = "1.0.66"
xcb = "1.2.0"
tokio = { version = "1.22.0", optional = true, features = ["sync"] }
